# sql-loader-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  example.db
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  sample.sql
src/: lib.rs  main.rs
tests/: integration_test.rs
