[package]
name = "sql-loader-rust"
version = "0.1.0"
edition = "2021"
authors = ["obstreperous-ai"]
license = "MIT"
description = "A lean CLI utility to run SQL data load scripts in minimal environments"
repository = "https://github.com/obstreperous-ai/sql-loader-rust"
readme = "README.md"
keywords = ["sql", "cli", "database", "loader"]
categories = ["command-line-utilities", "database"]

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database connectivity with async support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "any"] }

# Error handling
anyhow = "1.0"

[dev-dependencies]
# Additional testing utilities
tokio-test = "0.4"
tempfile = "3.15"

[[bin]]
name = "sql-loader"
path = "src/main.rs"

[profile.release]
# Optimize for size for static binary deployment
opt-level = "z"
lto = true
codegen-units = 1
strip = true
